# sqema

./: .coveragerc  .travis.yml  AUTHORS.txt  CHANGELOG.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
backup/: example.py  example.sqema.yaml  sqema2.py
example/: .connections.yaml  example.py  example.sh  sqema.yaml
example/data/: User-test.csv
features/: environment.py  fixtures.py  general.feature
features/general-test/: .connections.yaml
features/general-test/sqema/my-mysql-database.database/AMySQLTable.table/: data.csv  definition.sql
features/general-test/sqema/my-mysql-database.database/MyFunction.function/: definition.sql
features/general-test/sqema/my-mysql-database.database/MySP.procedure/: definition.sql
features/general-test/sqema/my-postgresql-database.database/MySP.procedure/: definition.sql
features/general-test/sqema/my-postgresql-database.database/apostgresqltable.table/: data.csv  definition.sql
features/general-test/sqema/my-sqlite-database.database/MySchema.schema/MyTable.table/: data.csv  definition.sql
features/general-test/sqema/my-sqlite-database.database/main.schema/MyTable.table/: definition.sql  index.sql
features/general-test/sqema/my-sqlite-database.database/main.schema/MyView.view/: definition.sql
features/general-test/sqema/my-sqlite-database2.database/MyTable.table/: data.csv  definition.sql
features/steps/: general.py
sqema/: __init__.py  exceptions.py  sqema.py
src/sqema/: __init__.py  sqema.py
tests/unit/: conftest.py  test_sqema.py
