[tool.poetry]
name = "sqema"
version = "0.1.0"
description = ""
authors = ["Tom Malkin <tommalkin28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.24.2"
simqle = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
behave = "^1.2"
coverage = "^4.5"
pymysql = "^0.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
