[tool.poetry]
name = "sqema"
version = "0.1.0"
description = ""
authors = ["Thomas Malkin <tommalkin28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.4"
simqle = "^0.5.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-mock = "^3.1.1"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
